Fix minor issues in corelib and servicabilty coding.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: core-libs
    • None
    • b150

      e_asin.c


      Code scan reports missing {}. I think the else needs to be removed.

      Unfortunately, the code looks the same in
      http://www.netlib.org/fdlibm/e_asin.c
       
      I found one copy of this code in the internet where the "else" is removed,
      but it's not completely the same:
      https://github.com/jerryscript-project/jerryscript/blob/master/jerry-libm/asin.c

      The code "if (huge+x>one) {" is only there to set the inexact flag of the processor.
      It's a way to avoid the C compiler to optimize the code away. It is always true,
      so the parenthesis of the outer else don't matter.

      k_standard.c

      exc.retval is returned below and thus should always be initialized.


      imageDecompressor.cpp

      Wrong destructor is used.


      java.c

      in line 1865 'name' was used, it should be 'alias'.


      java_md_solinux.c

      "//" in path is useless. Further down a free is missing.


      SDE.c

      Call to stratumTableIndex can return negative value if defaultStratumId == null.

      socket_md.c

      arg.l_linger is passed to setsockopt uninitialized. Its use is hidden in the macros.

      unpack.cpp

      n.slice should not get negative argument for end, which is passed from dollar1.
      But dollar1 can get negative where it is set to the result of lastIndexOf(DOLLAR_MIN, DOLLAR_MAX, n, dollar2 - 1).

            Assignee:
            Goetz Lindenmaier
            Reporter:
            Goetz Lindenmaier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: