8170663: Fix minor issues in corelib and servicabilty coding

Co-authored-by: David CARLIER <devnexen@gmail.com>
Reviewed-by: dsamersoff, dholmes